# rdkc-thumbnail

./: CONTRIBUTING.md  Makefile  NOTICE  rdk_build.sh  rdk_env.xml
ding/: DingNotification.cpp  DingNotification.h
event_notifications/: Makefile  main.cpp  mpipe_port.cpp  smart_thumbnail.cpp
event_notifications/include/: mpipe_port.h  smart_thumbnail.h
face_detection/: CMakeLists.txt  face_detection.cpp
normal_thumbnail/: CMakeLists.txt  normal_thumbnail.cpp  normal_thumbnail.h
smart_thumbnail/: Makefile  main.cpp  mpipe_port.cpp  smart_thumbnail.cpp
smart_thumbnail/include/: mpipe_port.h  smart_thumbnail.h
smart_thumbnail_cvr_lite/: Makefile  main.cpp  mpipe_port.cpp  smart_thumbnail.cpp
smart_thumbnail_cvr_lite/include/: mpipe_port.h  smart_thumbnail.h
src/: Makefile  thumbnailUpload.cpp  thumbnailUpload.h  thumbnail_upload_main.cpp
